--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="utf-8"/>
-  <title>Toastmaster Speech Timer</title>
-  <meta description="Practice your speech with confidence. This timer can be used to practice any speech type. It was originally created for practicing Toastmaster speeches. Large font and big colors enable you to see it from a distance."
+  <title>Community Board Presentation Timer</title>
+  <meta description="This timer can be used to practice any speech type. It was originally created for practicing Toastmaster speeches. Large font and big colors enable you to see it from a distance."
 
   <link href="/favicon.ico" rel="shortcut icon" type="image/x-icon"/>
   <meta name="viewport" content="width=device-width"/>
@@ -16,7 +16,7 @@
 <body>
 <div id="body">
   <section class="content-wrapper">
-    <h1 style="margin-bottom: 20px;">Toastmaster Speech Timer</h1>
+    <h1 style="margin-bottom: 20px;">Community Board Presentation Timer</h1>
 
     <div>
       <div class="row" id="buttons" style="font-size: large"></div>
@@ -46,8 +46,7 @@
       <div>
         <label class="label label-default"><input type="checkbox" id="showDigits" name="showDigits" value="showDigits"
                                                   checked="checked"
-                                                  title="When you are giving a toastmasters speech you will not see the time. All you will have is the green, yellow, red lights come on. In order to simulate a real world you can disable the digits being shown.">Show
-          Digits</label>
+                                                  title="You can disable the digits being shown.">Show Digits</label>
       </div>
 
       <div class="row" id="trafficlight" style="font-size: 28em;line-height:600px">
@@ -63,7 +62,7 @@
 <footer>
   <div class="content-wrapper">
     <div class="float-left">
-      <p>&copy; 2013 - Guy Ellis</p>
+      <p><a href="" target="_blank">&copy; 2013 - Guy Ellis</a></p>
     </div>
   </div>
 </footer>
