--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8"/>
   <title>Community Board Presentation Timer</title>
-  <meta description="This timer can be used to practice any speech type. It was originally created for practicing Toastmaster speeches. Large font and big colors enable you to see it from a distance."
+  <meta description="This timer can be used to time any speech type. It was originally created for practicing Toastmaster speeches. Large font and big colors enable you to see it from a distance."
 
   <link href="/favicon.ico" rel="shortcut icon" type="image/x-icon"/>
   <meta name="viewport" content="width=device-width"/>
@@ -11,7 +11,7 @@
   <link href="https://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet">
   <link href="toastmaster.css" rel="stylesheet"/>
 
-  <link rel="canonical" href="https://www.toastmastertimer.com/">
+  <link rel="canonical" href="https://timer.beta.nyc/">
 </head>
 <body>
 <div id="body">
@@ -44,9 +44,7 @@
       <br/>
 
       <div>
-        <label class="label label-default"><input type="checkbox" id="showDigits" name="showDigits" value="showDigits"
-                                                  checked="checked"
-                                                  title="You can disable the digits being shown.">Show Digits</label>
+        <label class="label label-default"><input type="checkbox" id="showDigits" name="showDigits" value="showDigits" checked="checked" title="You can disable the digits being shown.">Show Digits</label>
       </div>
 
       <div class="row" id="trafficlight" style="font-size: 28em;line-height:600px">
@@ -62,7 +60,7 @@
 <footer>
   <div class="content-wrapper">
     <div class="float-left">
-      <p><a href="" target="_blank">&copy; 2013 - Guy Ellis</a></p>
+      <p><a href="https://github.com/guyellis/toastmaster-timer" target="_blank">&copy; 2013 - Guy Ellis - MIT License</a></p>
     </div>
   </div>
 </footer>
@@ -104,16 +102,7 @@
 <script type="text/javascript" src="https://apis.google.com/js/plusone.js"></script>
 
 <!-- Google Analytics -->
-<script>
-    (function (i, s, o, g, r, a, m) {
-        i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
-            (i[r].q = i[r].q || []).push(arguments)
-        }, i[r].l = 1 * new Date(); a = s.createElement(o),
-        m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
-    })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
-    ga('create', 'UA-164775-23', 'toastmastertimer.com');
-    ga('require', 'displayfeatures');
-    ga('send', 'pageview');
-</script> 
+<!-- Google Analytics Needs to be added -->
+
 </body>
 </html>
