--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link href="https://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet">
   <link href="toastmaster.css" rel="stylesheet"/>
 
-  <link rel="canonical" href="https://timer.beta.nyc/">
+  <link rel="canonical" href="https://betanyc.github.io/timer/">
 </head>
 <body>
 <div id="body">
